# verl-harness

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  experiment_progress.md  loop_plan.md  task-overview.md
harness/: README.md  pyproject.toml
harness/src/harness/: __init__.py  __main__.py  cli.py  context.py  contracts.py  events.py  fsm.py  hitl.py  loop.py  orchestrator.py  pricing.yaml  providers.py  providers.yaml  resume.py  runlog.py  state_driver.py  usage.py
harness/src/harness/backends/: __init__.py  anthropic.py  base.py  openai.py  translate.py
harness/src/harness/tools/: __init__.py  base.py  bash.py  edit.py  read.py  registry.py  todo.py  web_fetch.py  write.py
harness/tests/: conftest.py  test_backends.py  test_cli.py  test_context.py  test_contracts.py  test_events.py  test_fsm.py  test_full_fsm.py  test_hitl.py  test_live_providers.py  test_loop.py  test_loop_bounds.py  test_orchestrator.py  test_prompt_caching.py  test_providers.py  test_resume.py  test_retry.py  test_runlog.py  test_schedule_wakeup.py  test_signals.py  test_state_driver.py  test_tools.py  test_translate.py  test_usage.py  test_web_fetch.py
states/: configure_algorithm.md  configure_reward.md  finalize.md  generate_preprocess.md  intake.md  launch_training.md  locate_recipe.md  monitor_training.md  prepare_data.md  provision_env.md  (+6 more)
web/: README.md  pyproject.toml
web/src/verl_harness_web/: __init__.py  __main__.py  parser.py  render.py  server.py  submit.py
web/src/verl_harness_web/static/: app.css  app.js  index.html
web/tests/: conftest.py  test_server_hitl.py
(+38 files in other folders)
