[project]
name = "verl-harness-runtime"
version = "0.1.0"
description = "Self-contained agent runtime for the verl-harness FSM specs — multi-backend LLM + tool loop + workspace-contract driver."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "WuizaKaseiyo" }]
license = { text = "Apache-2.0" }
dependencies = [
    "anthropic>=0.34",
    "openai>=1.40",
    "httpx>=0.27",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
test = ["pytest>=8"]

[project.scripts]
verl-harness-runtime = "harness.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/harness"]
