[project]
name = "verl-harness-web"
version = "0.1.0"
description = "Live dashboard for verl-harness training runs — FSM visualisation, training-progress charts, anomaly tracking, log tail."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "WuizaKaseiyo" }]
license = { text = "Apache-2.0" }
dependencies = [
    "starlette>=0.37",
    "uvicorn>=0.29",
    "watchfiles>=0.21",
]

[project.scripts]
verl-harness-web = "verl_harness_web.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/verl_harness_web"]
